mythtv (0.23.0+fixes23872-0ubuntu1) UNRELEASED; urgency=low

  [ Dave Walker (Daviey) ]
  * New upstream snapshot (r23872)
    - Fixes crash of mythfrontend when upconverting audio to 5.1 (LP: #550562)
    - Upstream now supports dropping permissions (LP: #445953)
    - Improve Jamu handling of invalid database data (LP: #549352)

  [ Mario Limonciello ]  
  * 40_libudev.path:
    - Add -ludev to the library check.
  * debian/control:
    - Drop linux-libc-dev build-dep.

 -- Marc Randolph <mrand@pobox.com>  Wed, 31 Mar 2010 09:05:27 -0500

mythtv (0.23.0+fixes23820-0ubuntu1) lucid; urgency=low

  * New upstream snapshot (r23820)
  * debian/patches/40_libudev.patch: Use libudev to get the information
    instead of calling udevinfo which has been superseded by udevadm,
    which is not compatiable.  (LP: #479509)
  * debian/control: Added Build-Depends of libudev-dev, linux-libc-dev
    to satisfy 40_libudev.patch.
  * debian/mcc-mirobridge/, debian/mythtv-backend.install:
    Install the Mythbuntu-Control-Centre plugin for mirobridge
    if mythtv-backend is installed. (LP: #520731)
  * Refreshed patches.
  * debian/changelog: Fixed old entry that had a non-valid email address
    causing lintian errors.

 -- Dave Walker (Daviey) <DaveWalker@ubuntu.com>  Sat, 27 Mar 2010 19:18:15 +0000

mythtv (0.23.0+fixes23789-0ubuntu2) lucid; urgency=low

  * debian/rules:
    - Compile-type=debug for better debugging purposes.

 -- Mario Limonciello <superm1@ubuntu.com>  Thu, 25 Mar 2010 23:22:48 -0500

mythtv (0.23.0+fixes23789-0ubuntu1) lucid; urgency=low

  [ Jamie Bennett ]
  * Fix FTBFS on armel (LP: #537714)

  [ Mario Limonciello ]
  * mythtv-{common,backend}.{config,templates,postinst}: (LP: #483748)
    - Simplify debconf questions by avoiding showing the generated pw
    - Don't warn about mythtv group.
    - Don't notify about running mythtv-setup.  This is optional (but
      of course encouraged!)
  * Set version to include a "+" delimitter.